Fixed links overflowing to several lines in footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ nav {
 
 a {
     text-decoration: none;
+    white-space: nowrap;
 }
 
 a:hover {
